# Goliath-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.user.4.10-pre1  Goliath-Engine.pro  MainWindow.cpp  MainWindow.h  MainWindow.ui  QOpenGLWidget_World.cpp  QOpenGLWidget_World.h  README.md  Resources.qrc  camera.h  first.fsh  first.vsh  mesh.h  model.h  shader.h  version.h
Applications/MainApplication/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui
applications/: CMakeLists.txt
applications/MainApplication/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui
applications/mainApplication/: CMakeLists.txt  DialogInputGetItem.h  DialogInputGetItem.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  main.cpp
resources/: generate.sh  resources.qrc
resources/icons/: 3dview.xcf  animations.xcf  bone.xcf  boneVertex.xcf  bones.xcf  boundingBox.xcf  curve.xcf  debug.xcf  depth.xcf  disk.xcf  edit.xcf  intersectRay.xcf  light.xcf  lookDev.xcf  material.xcf  mesh.xcf  node.xcf  normal.xcf  object.xcf  outliner.xcf  pose.xcf  poseMode.xcf  properties.xcf  rendered.xcf  skeleton.xcf  solid.xcf  surface.xcf  timeline.xcf  vertex.xcf  vertexGroups.xcf  wireframe.xcf  xRays.xcf
resources/models/camera/: camera.mtl
resources/models/light/point/: cube.mtl
resources/models/light/spot/: fonarik_low.mtl
resources/models/light/sun/: 13913_Sun_v2_l3 - Copy.mtl  13913_Sun_v2_l3.mtl  CheckerBoard.tga  sun.mtl
resources/shader/: axis.fsh  axis.vsh  bloom.fsh  blur.fsh  blur.vsh  bone.fsh  bone.vsh  camera.fsh  camera.vsh  cubeMap.fsh  first.fsh  grid.fsh  grid.vsh  light.fsh  minimal.vsh  model_loading.vsh  normalVector.fsh  normalVector.gsh  normalVector.vsh  skybox.fsh  skybox.vsh  text.fsh  text.vsh  wireFrame.fsh
resources/shader/shading/: depth.fsh  depth.vsh  lookDev.fsh  lookDev.vsh  normal.fsh  normal.vsh  pnTriangle.fsh  pnTriangle.tcs.glsl  pnTriangle.tes.glsl  pnTriangle.vsh  rendered.fsh  rendered.vsh  solid.fsh  solid.vsh  vertexGroup.fsh  vertexGroup.vsh
resources/shader/shadow/: dirlight_shadow_depth.fsh  dirlight_shadow_depth.vsh  pointLight_shadows_depth.fsh  pointLight_shadows_depth.gsh  pointLight_shadows_depth.vsh
resources/textures/: de_aztec_material_1.tga
shader/: depthTesting.fsh  first.fsh  first.vsh  light.vsh  model_loading.fsh
src/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  QOpenGLWidget_World.cpp  mesh.h
src/Gui/: CMakeLists.txt  FormEditor.cpp  FormEditor.h  QLabelOpener.cpp  QSplitterNode.cpp  QSplitterNode.h  QSplitterRoot.cpp  QSplitterRoot.h
src/Gui/Editor/: FormEditor.cpp  FormEditor.h  QLabelOpener.cpp  QLabelOpener.h  QOpenGLWidget_World.h
src/Gui/TillingWindow/: QSplitterNode.cpp  QSplitterRoot.cpp
src/OpenGL/: CMakeLists.txt  QOpenGLWidget_World.h  mesh.h  model.h  shader.h
src/assimp/: Assimp.cpp  Assimp.h
src/engine/: Environment.cpp  Environment.h  Environment2.cpp  Environment2.h  QOpenGLWindow_Render.cpp  QOpenGLWindow_Render.h  Scene.cpp  Scene.h
src/engine/object/light/: Light.cpp
src/engine/object/material/: Color.h  Material.h
src/engine/object/mesh/: mesh.cpp
src/engine/scene/: Node.cpp  Node.h  Object.cpp  Object.h  Scene.cpp  Scene.cpp.autosave  Scene.h  Scene.h.autosave  model.cpp  model.h
src/engine/scene/animation/: Animation.cpp  Animation.h
src/engine/scene/camera/: Camera.cpp  Camera.h  CameraFps.cpp  CameraFps.h  CameraStrategy.cpp  CameraStrategy.h  CameraWorld.cpp  CameraWorld.h
src/engine/scene/light/: CubeMap.cpp  CubeMap.h  DirLight.cpp  DirLight.h  Light.cpp  Light.h  PointLight.cpp  PointLight.h  SkyBox.cpp  SkyBox.h  SpotLight.cpp  SpotLight.h
src/engine/scene/material/: Color.cpp  Color.h  Material.cpp  Material.h  Texture.cpp  Texture.h
src/engine/scene/mesh/: Vertex.h  mesh.cpp  mesh.h
src/engine/scene/model/: Model.cpp  Model.h  Node.cpp  Vertex.h
src/gui/: DialogInputGetItem.cpp  FormEditor.ui  MainWindow.cpp  MainWindow.h  QLabelOpener.h  QOpenGLWidget_Editor.cpp  QOpenGLWidget_Editor.h  QSplitterNode.cpp  QSplitterNode.h
src/gui/editor/: MainWindowEditor.cpp  MainWindowEditor.h  MainWindowEditor.ui  TemplateMenuBar.cpp  TemplateMenuBar.h
src/gui/editor/3dview/: MainWindow3dView.cpp  MainWindow3dView.cpp.autosave  MainWindow3dView.h  MainWindow3dView.ui  QOpenGLWidget_3dView.cpp  QOpenGLWidget_3dView.h
src/gui/editor/fileOpenned/: QListView_FileOpenned.cpp  (+1 more)
src/gui/system/: FormSystemBrowser.cpp  FormSystemBrowser.h  FormSystemBrowser.ui
src/image/: tga.h
src/opengl/: BoundingBox.cpp  BoundingBox.h  CameraWorld.cpp  CameraWorld.h  Frustum.cpp  Frustum.h  Material.cpp  Material.h  Node.cpp  Node.h  OpenglContext.cpp  OpenglContext.h  Plane.cpp  Plane.h  TextRendering.cpp  TextRendering.h  axis.h  grid.h  mesh.cpp  mesh.h  model.cpp  model.h  shader.cpp  shader.h  version.h
src/opengl/camera/: Camera.cpp  Camera.h  CameraFps.cpp  CameraFps.h  CameraWorld.cpp  CameraWorld.h
src/opengl/geometry/: AxisGeometry.cpp  AxisGeometry.h  Cube.cpp  Cube.h  CubeGeometry.cpp  CubeGeometry.h  CubeMapGeometry.cpp  CubeMapGeometry.h  DotGeometry.cpp  DotGeometry.h  LineGeometry.cpp  LineGeometry.h  QuadGeometry.cpp  QuadGeometry.h  ScreenQuadGeometry.cpp  ScreenQuadGeometry.h  SkyBoxGeometry.cpp  SkyBoxGeometry.h  TriangleGeometry.cpp  TriangleGeometry.h  boneGeometry.cpp  boneGeometry.h  uvSphereGeometry.cpp  uvSphereGeometry.h
src/opengl/rayTracer/: Ray.cpp  Ray.h  RayTracer.cpp  RayTracer.h
src/qt/: FormEditor.cpp  FormEditor.h  FormEditor.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  QSplitterNode.cpp  QSplitterNode.h
src/qt/editor/: FormEditor.cpp  FormEditor.h  FormEditor.ui  QOpenGLWidget_World.h
src/qt/tillingWindow/: QSplitterNode.cpp
src/session/: Session.cpp  Session.h  SessionLoad.cpp  SessionLoad.h  SessionSave.cpp  SessionSave.h
src/settings/: Settings.cpp
tests/: CMakeLists.txt
tests/3dView/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui
tests/tillingWindow/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  TillingWindow.cpp  TillingWindow.h  TillingWindow.ui  main.cpp
(+113 files in other folders)
